--- a/composer.json
+++ b/composer.json
@@ -16,36 +16,32 @@
            "sjparkinson/static-review":"5.2.*"
 	},
   "require":{
-      "php":"^5.4",
-      "illuminate/notifications":"^5.3",
-      "illuminate/support":"^5.1",
-      "igorw/event-source":"dev-master",
-      "symphony/console":"dev-master",
-      "symphony/http-foundation":"dev-master"
+          "php":"^5.4",
+          "illuminate/notifications":"^5.3",
+          "illuminate/support":"^5.1",
+          "igorw/event-source":"dev-master",
+          "symphony/console":"dev-master",
+          "symphony/http-foundation":"dev-master"
   },
 	"autoload": {
-    		"psr-4": {
-               "Synergixe\\PHPBeamzer\\": "src/"
-        }
+    		    "psr-4": {
+                "Synergixe\\PHPBeamzer\\": "src/"
+            }
 	},
   "autoload-dev": {
-       "psr-4":{
-            "Synergixe\\PHPBeamzer\\Test\\":"tests"
-       }
+          "psr-4":{
+                "Synergixe\\PHPBeamzer\\Test\\":"tests"
+          }
   },
 	"config":{
-		"sort-packages":true
+		      "sort-packages":true
 	},
 	"minimum-stability":"dev",
   "prefer-stable":true,
   "scripts": {
         "tests":"vendor/bin/phpunit",
         "post-install-cmd": [
-            "php artisan make:notification ActivityStream",
-            "php bin/beam-script.php stremaer-notification:install"
-        ],
-        "post-update-cmd": [
-            "php artisan dumpautoload"
+            "php bin/beam-script.php"
         ]
   }
 }
