--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,9 @@
   "scripts": {
         "tests":"vendor/bin/phpunit",
         "post-install-cmd": [
-            "php bin/beam-script.php"
+            	"php bin/beam-script.php",
+		"php artisan vendor:publish --tag=config",
+		"php artisan vendor:publish --tag="
         ]
   }
 }
