--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
           "php":"^5.4",
           "illuminate/notifications":"^5.3",
           "illuminate/support":"^5.1",
+	  "illuminate/database":"^5.3",
           "igorw/event-source":"dev-master",
           "symphony/console":"dev-master",
           "symphony/http-foundation":"dev-master"
