--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,13 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
+  - 7.1
   - hhvm
+  
+env:
+  - LARAVEL_VERSION="5.4.*"
+  - LARAVEL_VERSION="5.5.*"
  
 matrix:
     allow_failures:
@@ -14,5 +20,8 @@ matrix:
 before_script:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install --dev
+  - travis_retry composer require illuminate/support:${LARAVEL_VERSION} --no-update
+  - travis_retry composer require illuminate/database:${LARAVEL_VERSION} --no-update
+  - travis_retry composer install --prefer-source --no-interaction
 
 script: phpunit
