--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "synergixe/php-beamzer",
 	"description": "This is a library that provides support for real-time feeds and notifications for web applications",
+	"version":"0.1.1-alpha2",
 	"keywords": [
 		"ajax long polling", 
 		"server-sent events",
@@ -13,6 +14,11 @@
 			"email": "isocroft@gmail.com"
 		}
    ],
+	"license":"MIT",
+	"support":{
+		"email": "isocroft@gmail.com",
+		"issues":"https://github.com/synergixe/php-beamzer/issues"
+	},
     "require-dev": {
            "mockery/mockery":"0.9.*",
            "phpunit/phpunit":"0.1.*",
@@ -52,7 +58,10 @@
             "providers": [
                 "Synergixe\\PHPBeamzer\\Providers\\Laravel\\BeamzerServiceProvider"
             ]
-	}
+	},
+	"aliases": {
+            "Streamer": "Synergixe\\PHPBeamzer\\Facades\\Streamer"
+        }
   },
   "scripts": {
         "tests":"vendor/bin/phpunit",
