--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
    ],
 	"license":"MIT",
 	"support":{
-		"email": "isocroft@gmail.com",
-		"issues":"https://github.com/synergixe/php-beamzer/issues"
+		"issues":"https://github.com/synergixe/php-beamzer/issues",
+		"source":"https://github.com/synergixe/php-beamzer"
 	},
     "require-dev": {
            "mockery/mockery":"0.9.*",
@@ -26,14 +26,14 @@
            "sjparkinson/static-review":"5.2.*"
 	},
   "require":{
-          "php":"^5.4",
-          "illuminate/notifications":"^5.4",
-          "illuminate/support":"^5.3",
-	  "illuminate/redis":"^5.4",
-	  "illuminate/database":"^5.4",
-          "igorw/event-source":"dev-master",
-          "illuminate/console":"^5.4",
-          "symphony/http-foundation":"dev-master"
+          "php":">=5.4.0",
+          "illuminate/notifications":"5.4.*",
+          "illuminate/support":"5.4.*",
+	  "illuminate/redis":"5.4.*",
+	  "illuminate/database":"5.4.*",
+          "igorw/event-source":"1.0.*",
+          "illuminate/console":"5.4.*",
+          "symfony/http-foundation":"4.0.*"
   },
   "autoload": {
 	"psr-4": {
@@ -51,8 +51,8 @@
  "config":{
 	  "sort-packages":true
  },
- "minimum-stability":"stable",
-  "prefer-stable":true,
+ "minimum-stability":"dev",
+  "prefer-stable":false,
   "extra": {
         "laravel": {
             "providers": [
