--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "synergixe/php-beamzer",
 	"description": "This is a library that provides support for real-time feeds and notifications for web applications",
-	"version":"0.1.1-alpha2",
+	"version":"0.1.1-alpha3",
 	"keywords": [
 		"ajax long polling", 
 		"server-sent events",
@@ -14,7 +14,7 @@
 			"email": "isocroft@gmail.com"
 		}
    ],
-	"license":"MIT",
+   "license":"MIT",
 	"support":{
 		"issues":"https://github.com/synergixe/php-beamzer/issues",
 		"source":"https://github.com/synergixe/php-beamzer"
@@ -26,14 +26,14 @@
            "sjparkinson/static-review":"5.2.*"
 	},
   "require":{
-          "php":">=5.4.0",
-          "illuminate/notifications":"5.4.*",
-          "illuminate/support":"5.4.*",
-	  "illuminate/redis":"5.4.*",
-	  "illuminate/database":"5.4.*",
-          "igorw/event-source":"1.0.*",
-          "illuminate/console":"5.4.*",
-          "symfony/http-foundation":"4.0.*"
+          "php":">=5.6.4",
+          "illuminate/notifications":"~5.4",
+          "illuminate/support":"~5.4",
+	  "illuminate/redis":"~5.4",
+	  "illuminate/database":"~5.4",
+          "igorw/event-source":"~1.0",
+          "illuminate/console":"~5.4",
+          "symfony/http-foundation":"~4.0"
   },
   "autoload": {
 	"psr-4": {
