--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "synergixe/php-beamzer",
 	"description": "This is a library that provides support for real-time feeds and notifications for PHP web applications",
-	"version":"0.1.1-alpha8",
+	"version":"0.1.1-alpha9",
 	"keywords": [
 		"ajax long polling", 
 		"server-sent events",
@@ -65,10 +65,9 @@
         }
   },
   "scripts": {
-        "tests":"vendor/bin/phpunit",
-        "post-install-cmd": [
-            	"php bin/beam-script.php",
-		"php artisan vendor:publish --tag=config"
+        "post-package-install": [
+            	"php ./bin/beam-script.php",
+		"cd ../../../ && php artisan vendor:publish --tag=config"
         ]
   }
 }
