--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "synergixe/php-beamzer",
 	"description": "This is a library that provides support for real-time feeds and notifications for PHP web applications",
-	"version":"0.1.2-alpha1",
+	"version":"0.1.2",
 	"keywords": [
 		"ajax long polling", 
 		"server-sent events",
