--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require-dev": {
            "mockery/mockery":"0.9.*",
            "phpunit/phpunit":"0.1.*",
+	   "phpstan/phpstan":"0.9.*",
            "orchestra/testbench":"3.5.*",
            "sjparkinson/static-review":"5.2.*"
 	},
