--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
 	"source":"https://github.com/synergixe/php-beamzer"
     },
     "require-dev": {
-           "mockery/mockery":"~0.9.*",
-           "phpunit/phpunit":"~0.1.*",
-	   "phpstan/phpstan":"~0.9.*",
-           "orchestra/testbench":"~3.5.*",
-           "sjparkinson/static-review":"~5.2.*"
+           "mockery/mockery":"0.9.*",
+           "phpunit/phpunit":"0.1.*",
+	   "phpstan/phpstan":"0.9.*",
+           "orchestra/testbench":"3.5.*",
+           "sjparkinson/static-review":"5.2.*"
 	},
   "require":{
           "php":">=5.6.4",
