--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 	},
   "require":{
           "php":">=5.6.4",
-	  "nesbot/carbon":"~1.22.0",
+	  "nesbot/carbon":"^1.22",
           "illuminate/notifications":"~5.4",
           "illuminate/support":"~5.4",
 	  "illuminate/queue":"~5.4",
