--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,10 @@
 	"source":"https://github.com/synergixe/php-beamzer"
     },
     "require-dev": {
-           "mockery/mockery":"0.9.*",
-           "phpunit/phpunit":"0.1.*",
+           "mockery/mockery":"^1.1",
+           "phpunit/phpunit":"^7.3",
 	   "phpstan/phpstan":"0.9.*",
-           "orchestra/testbench":"3.5.*",
+           "orchestra/testbench":"~3.7.0",
            "sjparkinson/static-review":"5.2.*"
 	},
   "require":{
