--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ php:
 env:
   - LARAVEL_VERSION="5.4.*"
   - LARAVEL_VERSION="5.5.*"
+  - LARAVEL_VERSION="5.6.*"
  
 matrix:
     allow_failures:
@@ -23,9 +24,13 @@ before_script:
   - travis_retry composer require illuminate/support:${LARAVEL_VERSION} --no-update
   - travis_retry composer require illuminate/database:${LARAVEL_VERSION} --no-update
   - travis_retry composer install --prefer-source --no-interaction
+  
+before_install:
+  - travis_retry composer self-update
 
-install: composer install
+install:
+  - travis_retry composer update --prefer-source
 
-script: phpunit
-    - vendor/bin/phpunit
-    - vendor/bin/phpstan analyse src tests --level=4
+script:
+    - phpstan analyse src tests --level=2
+    - phpunit
