--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,41 @@
 language: php
 
-php: 
-  - 5.3
-  - 5.4
-  - 5.5
+php:
   - 5.6
   - 7.0
   - 7.1
-  - hhvm
+  - 7.2
+  - nightly
   
 env:
   - LARAVEL_VERSION="5.4.*"
   - LARAVEL_VERSION="5.5.*"
   - LARAVEL_VERSION="5.6.*"
- 
+  
 matrix:
-    allow_failures:
-        - php: hhvm
+  allow_failures:
+  - php: 7.2
+  - php: nightly
+  
+## Cache composer
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 before_script:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install --dev
-  - travis_retry composer require illuminate/support:${LARAVEL_VERSION} --no-update
-  - travis_retry composer require illuminate/database:${LARAVEL_VERSION} --no-update
-  - travis_retry composer install --prefer-source --no-interaction
+  #- travis_retry composer require illuminate/support:${LARAVEL_VERSION} --no-update
+  #- travis_retry composer require illuminate/database:${LARAVEL_VERSION} --no-update
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
+  - composer dumpautoload -o
   
 before_install:
   - travis_retry composer self-update
 
 install:
-  - travis_retry composer update --prefer-source
-
+   
+   
 script:
     - phpstan analyse src tests --level=2
     - phpunit
