--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
            "mockery/mockery":"^1.1",
            "phpunit/phpunit":"^7.3",
 	   "phpstan/phpstan":"0.9.*",
+	   "friendsofphp/php-cs-fixer": "^2.5",
            "orchestra/testbench":"~3.7.0",
            "sjparkinson/static-review":"5.2.*"
 	},
