--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,19 @@ php:
   - 7.1
   - 7.2
   - nightly
-  
-env:
-  - LARAVEL_VERSION="5.4.*"
-  - LARAVEL_VERSION="5.5.*"
-  - LARAVEL_VERSION="5.6.*"
-  
+
 matrix:
   allow_failures:
   - php: 7.2
   - php: nightly
+  
+env:
+  matrix:
+    - COMPOSER_FLAGS="--prefer-lowest"
+    - COMPOSER_FLAGS=""
+    #- LARAVEL_VERSION="5.4.*"
+    #- LARAVEL_VERSION="5.5.*"
+    #- LARAVEL_VERSION="5.6.*"
   
 ## Cache composer
 cache:
@@ -23,18 +26,11 @@ cache:
     - $HOME/.composer/cache
 
 before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install --dev
+  - travis_retry composer self-update
   #- travis_retry composer require illuminate/support:${LARAVEL_VERSION} --no-update
   #- travis_retry composer require illuminate/database:${LARAVEL_VERSION} --no-update
   - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
   - composer dumpautoload -o
-  
-before_install:
-  - travis_retry composer self-update
-
-install:
-   
    
 script:
     - phpstan analyse src tests --level=2
