--- a/composer.json
+++ b/composer.json
@@ -21,23 +21,23 @@
     },
     "require-dev": {
            "mockery/mockery":"^1.1",
-           "phpunit/phpunit":"^7.3",
+           "phpunit/phpunit":"^6.5|^7.0",
 	   "phpstan/phpstan":"0.9.*",
 	   "friendsofphp/php-cs-fixer": "^2.5",
-           "orchestra/testbench":"~3.7.0",
+           "orchestra/testbench":"^3.7.0",
            "sjparkinson/static-review":"5.2.*"
 	},
   "require":{
           "php":">=5.6.4",
 	  "nesbot/carbon":"^1.22",
-          "illuminate/notifications":"~5.4",
-          "illuminate/support":"~5.4",
-	  "illuminate/queue":"~5.4",
-	  "illuminate/redis":"~5.4",
-	  "illuminate/database":"~5.4",
+          "illuminate/notifications":"~5.4.0|~5.5.28|~5.6.0|~5.7.0",
+          "illuminate/support":"~5.4.0|~5.5.28|~5.6.0|~5.7.0",
+	  "illuminate/queue":"~5.4.0|~5.5.28|~5.6.0|~5.7.0",
+	  "illuminate/redis":"~5.4.0|~5.5.28|~5.6.0|~5.7.0",
+	  "illuminate/database":"~5.4.0|~5.5.28|~5.6.0|~5.7.0",
           "igorw/event-source":"~1.0",
-          "illuminate/console":"~5.4",
-          "symfony/http-foundation":"~3.4"
+          "illuminate/console":"~5.4.0|~5.5.28|~5.6.0|~5.7.0",
+          "symfony/http-foundation":"~3.4|~4.1"
   },
   "autoload": {
 	"psr-4": {
