--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require-dev": {
            "mockery/mockery":"^1.0",
            "orchestra/testbench":"^3.4",
-           "phpunit/phpunit":"^7.0",
+           "phpunit/phpunit":"^5.7|^7.0",
 	   "phpstan/phpstan":"0.9.*",
 	   "friendsofphp/php-cs-fixer": "^2.5"
 	},
